# qt-web-bridge

./: .gitignore  Cargo.toml  README.md  build.rs
command_macros/: Cargo.toml
command_macros/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
qml/: Main.qml
src/: backend.rs  commands.rs  dispatcher.rs  events.rs  main.rs
web/: app.js  backend.js  index.html  qwebchannel.js  style.css
