[package]
name = "qt-web-bridge"
version = "0.1.0"
edition = "2024"

[dependencies]
# NOTE: qtbridge is in public beta. As of the doc snapshot this project was
# written against, the crates.io release uses `qtbridge = "*"`. If you're
# building against the git repo directly (recommended while it's this new),
# use a git/path dependency instead, e.g.:
qtbridge = { git = "https://github.com/qt/qtbridge-rust", features = ["serde_json"] }
#qtbridge = "*"

# Everything below this line is ordinary Rust - this is the whole point of
# the "Tauri-style" approach: your app logic doesn't need to know it's
# running inside Qt.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
serde_json = "1"
macros = { path = "macros" }
include_dir = "0.7.4"
serde = { version = "1.0.228", features = ["derive"] }

[build-dependencies]